// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/meta/Item matches the snapshot 1`] = `
<Fragment>
  <Label>
    metadata.a_metadata_property
  </Label>
  <Value
    dangerouslySetInnerHTML={
      Object {
        "__html": "A Metadata Value",
      }
    }
  />
</Fragment>
`;

exports[`global/components/meta/Item when passed a child component matches the snapshot 1`] = `
<Fragment>
  <Label>
    metadata.a_metadata_property
  </Label>
  <Value>
    <div>
      A Metadata Value
    </div>
  </Value>
</Fragment>
`;
